--- a/app/views/coletamensal/_fazer_scm.html.erb
+++ b/app/views/coletamensal/_fazer_scm.html.erb
@@ -127,7 +127,7 @@
                     <th scope="col">Tipo de Produto</th>
                     <th scope="col">Velocidade</th>
                     <th scope="col">Quantidade</th>
-                    <th scope="col">Codigo IBGE</th>
+                    <th scope="col">Código IBGE</th>
                 </tr>
             </thead>
             <tbody>
@@ -137,15 +137,15 @@
                      <td><%= coleta.mesInformado %></td>
                      <td><%= coleta.anoInformado %></td>
                      <td><%= coleta.uf %></td>
-                     <td><%= coleta.cidade%></td>
-                     <td><%= coleta.tipoCliente%></td>
-                     <td><%= coleta.tipoAtendimento%></td>
-                     <td><%= coleta.tipoMeio%></td>
-                     <td><%= coleta.tipoTecnologia%></td> 
-                     <td><%= coleta.tipoProduto%></td>
-                     <td><%= coleta.velocidade%></td>
-                     <td><%= coleta.quantidadeAcesso%></td>
-                     <td><%= coleta.codigoIBGE%></td>
+                     <td><%= coleta.cidade %></td>
+                     <td><%= coleta.tipoCliente %></td>
+                     <td><%= coleta.tipoAtendimento %></td>
+                     <td><%= coleta.tipoMeio %></td>
+                     <td><%= coleta.tipoTecnologia %></td> 
+                     <td><%= coleta.tipoProduto %></td>
+                     <td><%= coleta.velocidade %></td>
+                     <td><%= coleta.quantidadeAcesso %></td>
+                     <td><%= coleta.codigoIBGE %></td>
                 </tr>
             <% end %>
               
