--- a/app/views/coletamensal/_fazer_scm.html.erb
+++ b/app/views/coletamensal/_fazer_scm.html.erb
@@ -117,7 +117,7 @@
                 <tr>
                    <th scope="col">Cnpj</th>
                     <th scope="col">Mês</th>
-                    <th scope="col">Ano<th>
+                    <th scope="col">Ano</th>
                     <th scope="col">UF</th>
                     <th scope="col">Cidade</th>
                     <th scope="col">Tipo de Cliente</th>
