--- a/app/views/coletaanual/_fazer_encalcescontratados.html.erb
+++ b/app/views/coletaanual/_fazer_encalcescontratados.html.erb
@@ -9,8 +9,10 @@
                          
                        <div class="row mb-3">
                          <div class="col-md-6">
-                              <p><%= f.label :cnpj, "CNPJ da Prestadora", class: "form-label" %></p>
-                               <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ sem os pontos", required: true, maxlength: 14 %></p>
+                              <p><%= f.label :cnpj, "CNPJ", class: "form-label" %></p>
+                              <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", 
+                                      placeholder: "Digite o CNPJ da Prestadora", required: true,
+                                      maxlength: 14, oninput: "this.value = this.value.replace(/[^0-9]/g, '')" %></p>
                          </div>
                          <div class="col-md-6">
                                <p><%= f.label :ano, "Ano", class: "form-label" %></p>
@@ -41,10 +43,14 @@
                     </div>
 
                     <div class="row mb-3">
-                       <div class="col-md-6">
-                          <p><%= f.label :cnpjContratada, "CNPJ da Empresa contratada", class: "form-label" %></p>
-                          <p><%= f.text_field :cnpjContratada, class: "form-control", id: "cnpjContratada", placeholder: "Digite o CNPJ da Empresa contratada", required: true, maxlength: 14 %></p>
-                        </div>
+                       
+                      <div class="col-md-6">
+                              <p><%= f.label :cnpjContratada, "CNPJ da Empresa contratada", class: "form-label" %></p>
+                              <p><%= f.text_field :cnpjContratada, class: "form-control", id: "cnpj", 
+                                      placeholder: "Digite o CNPJ da Prestadora", required: true,
+                                      maxlength: 14, oninput: "this.value = this.value.replace(/[^0-9]/g, '')" %></p>
+                         </div>
+                        
                     </div>
 
                      <div class="row mb-3">
