--- a/app/views/coletamensal/_fazer_stfc.html.erb
+++ b/app/views/coletamensal/_fazer_stfc.html.erb
@@ -20,7 +20,9 @@
                               <p><%= f.label :cnpj, "CNPJ", class: "form-label" %></p>
                               <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", 
                                       placeholder: "Digite o CNPJ da Prestadora", required: true,
-                                      maxlength: 14, oninput: "this.value = this.value.replace(/[^0-9]/g, '')" %></p>
+                                      maxlength: 14, oninput: 
+                                      onload: "this.value = this.value.replace(/[^0-9]/g, '')",
+                                      oninput: "this.value = this.value.replace(/[^0-9]/g, '')" %></p>
                          </div>
                       </div>
 
