--- a/app/views/coletaanual/_fazer_estacao.html.erb
+++ b/app/views/coletaanual/_fazer_estacao.html.erb
@@ -106,8 +106,7 @@
                 <tr>
                     <th scope="col">CNPJ</th>
                     <th scope="col">Ano</th>
-                    <th scope="col">Id da estação de origem</th>
-                    <th scope="col">Id da estação de destino</th>
+                    <th scope="col">Id da estação</th>
                     <th scope="col">Número da Estação</th>
                     <th scope="col">Código IBGE</th>
                     <th scope="col">Abertura</th>
@@ -124,8 +123,7 @@
                 <tr> 
                      <td><%= coleta.cnpj %></td>
                      <td><%= coleta.ano %></td>
-                     <td><%= coleta.idEstacaoOrigem %></td>
-                     <td><%= coleta.idEstacaoDestino %></td>
+                     <td><%= coleta.idEstacao %></td>
                      <td><%= coleta.nEstacao %></td>
                      <td><%= coleta.codigoIBGE %></td>
                      <td><%= coleta.abertura %></td>
