--- a/app/views/coletamensal/ver.html.erb
+++ b/app/views/coletamensal/ver.html.erb
@@ -1,4 +1,23 @@
 
+        <table class="table table-custom">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">Data</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Formulário</th>
+                    <th scope="col">Tipo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><%= @coleta.textoData %></td>
+                     <td><span class="badge rounded-pill <%= @coleta.status == 'Aguardando Coleta' ? 'bg-secondary' : @coleta.status == 'Coleta Realizada' ? 'bg-success' : 'bg-danger' %>"><%= @coleta.status %></span></td>
+                     <td><%= @coleta.tituloColeta %></td>
+                     <td><%= @coleta.tipoColeta %></td>
+                </tr>
+            </tbody>
+      </table>
+
 <% if @coleta.tipoColeta == 'SCM' %>
   <%= render "coletamensal/ver_scm" %>
 <% end %>
@@ -10,3 +29,11 @@
 <% if @coleta.tipoColeta == 'STFC' %>
   <%= render "coletamensal/ver_stfc" %>
 <% end %>
+
+
+<div class="row mb-3">
+        <div class="col-md-6">
+          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg  text-white' %>
+
+        </div>
+</div>
