--- a/app/views/coletamensal/ver.html.erb
+++ b/app/views/coletamensal/ver.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 
         <table class="table table-custom">
             <thead class="thead-light">
@@ -36,4 +37,5 @@
           <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg  text-white' %>
 
         </div>
+</div>
 </div>
