--- a/app/views/coletamensal/ver.html.erb
+++ b/app/views/coletamensal/ver.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
 
+   <h3><strong><%=@organizacao.nome %></strong></h3><br/>
+<br/><br/>
         <table class="table table-custom">
             <thead class="thead-light">
                 <tr>
@@ -18,6 +20,7 @@
                 </tr>
             </tbody>
       </table>
+<br/><br/><hr>
 
 <% if @coleta.tipoColeta == 'SCM' %>
   <%= render "coletamensal/ver_scm" %>
