--- a/app/views/coletamensal/ver.html.erb
+++ b/app/views/coletamensal/ver.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-
+<h3>Status da Coleta</h3>
 <br/><br/>
         <table class="table table-custom">
             <thead class="thead-light">
