--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -107,7 +107,7 @@
                                      <%= f.hidden_field :tipoColeta, :value => coleta.tipoColeta %>
                                      <%= f.hidden_field :project_id, :value => coleta.project_id %>
                                      <%= f.hidden_field :semestre, :value => coleta.semestre %>
-                                    <p><%= f.submit "Visualizar coleta", class:"btn btn-secondary btn-sm" %> </p>
+                                    <p><%= f.submit "Visualizar coleta", class:"btn btn-success btn-sm" %> </p>
                                   <% end %>
                             <% end %>
                           </td>
@@ -131,7 +131,7 @@
                                      <%= f.hidden_field :tipoColeta, :value => coleta.tipoColeta %>
                                      <%= f.hidden_field :project_id, :value => coleta.project_id %>
                                      <%= f.hidden_field :semestre, :value => coleta.semestre %>
-                                     <%= f.submit "Visualizar coleta", class:"btn btn-outline-secondary" %>
+                                   <p><%= f.submit "Visualizar coleta", class:"btn btn-success btn-sm" %> </p>
                                 <% end %>
                             <% end %>
                           </td>
@@ -152,7 +152,7 @@
                                          <%= f.hidden_field :tituloColeta, :value => coleta.tituloColeta %>
                                          <%= f.hidden_field :tipoColeta, :value => coleta.tipoColeta %>
                                          <%= f.hidden_field :project_id, :value => coleta.project_id %>
-                                         <%= f.submit "Visualizar coleta", class:"btn btn-outline-secondary" %>
+                                         <p><%= f.submit "Visualizar coleta", class:"btn btn-success btn-sm" %> </p>
                                       <% end %>
                                 <% end %>
                               <% else %>
@@ -170,7 +170,7 @@
                                            <%= f.hidden_field :tituloColeta, :value => coleta.tituloColeta %>
                                            <%= f.hidden_field :tipoColeta, :value => coleta.tipoColeta %>
                                            <%= f.hidden_field :project_id, :value => coleta.project_id %>
-                                           <%= f.submit "Visualizar coleta", class:"btn btn-outline-secondary" %>
+                                          <p><%= f.submit "Visualizar coleta", class:"btn btn-success btn-sm" %> </p>
                                       <% end %>
                                   <% end %>
                               <% end %>
