--- a/app/views/coletamensal/_fazer_tvpa.html.erb
+++ b/app/views/coletamensal/_fazer_tvpa.html.erb
@@ -27,8 +27,8 @@
                         <div class="row mb-3">
                          <div class="col-md-6">
                           <p><%= f.label :mesInformado, "Mês", class: "form-label" %></p>
-                          <p><%= f.select :mesInformado, options_for_select([['Janeiro', '1'], ['Fevereiro', '2'], ['Março', '3'], ['Abril', '4'], ['Maio', '5'], ['Junho', '6'],
-                          ['Julho', '7'], ['Agosto', '8'], ['Setembro', '9'], ['Outubro', '10'], ['Novembro', '11'], ['Dezembro', '12']]), required: true %></p>
+                          <p><%= f.select :mesInformado, options_for_select([['1', '1'], ['2', '2'], ['3', '3'], ['4', '4'], ['5', '5'], ['6', '6'],
+                          ['7', '7'], ['8', '8'], ['9', '9'], ['10', '10'], ['11', '11'], ['12', '12']]), required: true %></p>
                          </div>
 
                          <div class="col-md-6">
