--- a/app/views/coletasemestral/_fazer_seac.html.erb
+++ b/app/views/coletasemestral/_fazer_seac.html.erb
@@ -13,9 +13,10 @@
                               <p><%= f.label :cnpj, "Cnpj", class: "form-label" %></p>
                                <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ sem os pontos", required: true, maxlength: 14 %></p>
                           </div>
+                         
                          <div class="col-md-6">
-                               <p><%= f.label :anoInformado, "Ano", class: "form-label" %></p>
-                               <p><%= f.text_field :anoInformado, class: "form-control", id: "anoInformado", placeholder: "Digite o ano", required: true %></p>
+                          <p><%= f.label :anoInformado, "Ano", class: "form-label" %></p>
+                          <p><%= f.select :anoInformado, options_for_select([['2023', '2023'], ['2024', '2024'], ['2025', '2025']]), required: true %></p>
                          </div>
                        </div>
 
