--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -27,7 +27,8 @@
                
             </div>
         </div>
-        <%= link_to("Recibos", project_documents_path(@projetoPreenchimento), :class => @projetoPreenchimento.css_classes).html_safe %>
+        <%= link_to "Recibos", project_documents_path(@projetoPreenchimento), class: "#{@projetoPreenchimento.css_classes} btn btn-success" %>
+        
     </div>
 
 
