--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -28,7 +28,7 @@
             </div>
         </div>
         <br/>
-        <%= link_to "Recibos", project_documents_path(@projetoPreenchimento), class: "#{@projetoPreenchimento.css_classes} btn btn-success" %>
+        <%= link_to "Recibos", project_documents_path(@projetoPreenchimento), class: "#{@projetoPreenchimento.css_classes} btn btn-success text-white" %>
         
     </div>
 
